--- a/app/index.html
+++ b/app/index.html
@@ -49,6 +49,126 @@
            </noscript>
         </picture>
 
+        <picture data-image-alt="Alt da imagem" data-lazy>
+           <source data-media="(min-width: 480px)"  data-src="http://placehold.it/480x320"  data-width="480"  data-height="320">
+           <source data-media="(min-width: 768px)"  data-src="http://placehold.it/768x600/ff0000"  data-width="768"  data-height="600">
+           <source data-media="(min-width: 1024px)" data-src="http://placehold.it/1024x600" data-width="1024" data-height="600">
+           <source data-media="(min-width: 1200px)" data-src="http://placehold.it/1200x600" data-width="1200" data-height="600">
+           <noscript>
+               <img src="http://placehold.it/1200x600" alt="Alt da imagem" width="1200" height="600">
+           </noscript>
+        </picture>
+
+        <picture data-image-alt="Alt da imagem" data-lazy>
+           <source data-media="(min-width: 480px)"  data-src="http://placehold.it/480x320"  data-width="480"  data-height="320">
+           <source data-media="(min-width: 768px)"  data-src="http://placehold.it/768x600/00ffff"  data-width="768"  data-height="600">
+           <source data-media="(min-width: 1024px)" data-src="http://placehold.it/1024x600" data-width="1024" data-height="600">
+           <source data-media="(min-width: 1200px)" data-src="http://placehold.it/1200x600" data-width="1200" data-height="600">
+           <noscript>
+               <img src="http://placehold.it/1200x600" alt="Alt da imagem" width="1200" height="600">
+           </noscript>
+        </picture>
+
+        <picture data-image-alt="Alt da imagem" data-lazy>
+           <source data-media="(min-width: 480px)"  data-src="http://placehold.it/480x320"  data-width="480"  data-height="320">
+           <source data-media="(min-width: 768px)"  data-src="http://placehold.it/768x600/000fff"  data-width="768"  data-height="600">
+           <source data-media="(min-width: 1024px)" data-src="http://placehold.it/1024x600" data-width="1024" data-height="600">
+           <source data-media="(min-width: 1200px)" data-src="http://placehold.it/1200x600" data-width="1200" data-height="600">
+           <noscript>
+               <img src="http://placehold.it/1200x600" alt="Alt da imagem" width="1200" height="600">
+           </noscript>
+        </picture>
+
+        <picture data-image-alt="Alt da imagem" data-lazy>
+           <source data-media="(min-width: 480px)"  data-src="http://placehold.it/480x320"  data-width="480"  data-height="320">
+           <source data-media="(min-width: 768px)"  data-src="http://placehold.it/768x600/ff0000"  data-width="768"  data-height="600">
+           <source data-media="(min-width: 1024px)" data-src="http://placehold.it/1024x600" data-width="1024" data-height="600">
+           <source data-media="(min-width: 1200px)" data-src="http://placehold.it/1200x600" data-width="1200" data-height="600">
+           <noscript>
+               <img src="http://placehold.it/1200x600" alt="Alt da imagem" width="1200" height="600">
+           </noscript>
+        </picture>
+
+        <picture data-image-alt="Alt da imagem" data-lazy>
+           <source data-media="(min-width: 480px)"  data-src="http://placehold.it/480x320"  data-width="480"  data-height="320">
+           <source data-media="(min-width: 768px)"  data-src="http://placehold.it/768x600/00ffff"  data-width="768"  data-height="600">
+           <source data-media="(min-width: 1024px)" data-src="http://placehold.it/1024x600" data-width="1024" data-height="600">
+           <source data-media="(min-width: 1200px)" data-src="http://placehold.it/1200x600" data-width="1200" data-height="600">
+           <noscript>
+               <img src="http://placehold.it/1200x600" alt="Alt da imagem" width="1200" height="600">
+           </noscript>
+        </picture>
+
+        <picture data-image-alt="Alt da imagem" data-lazy>
+           <source data-media="(min-width: 480px)"  data-src="http://placehold.it/480x320"  data-width="480"  data-height="320">
+           <source data-media="(min-width: 768px)"  data-src="http://placehold.it/768x600/000fff"  data-width="768"  data-height="600">
+           <source data-media="(min-width: 1024px)" data-src="http://placehold.it/1024x600" data-width="1024" data-height="600">
+           <source data-media="(min-width: 1200px)" data-src="http://placehold.it/1200x600" data-width="1200" data-height="600">
+           <noscript>
+               <img src="http://placehold.it/1200x600" alt="Alt da imagem" width="1200" height="600">
+           </noscript>
+        </picture>
+
+        <picture data-image-alt="Alt da imagem" data-lazy>
+           <source data-media="(min-width: 480px)"  data-src="http://placehold.it/480x320"  data-width="480"  data-height="320">
+           <source data-media="(min-width: 768px)"  data-src="http://placehold.it/768x600/ff0000"  data-width="768"  data-height="600">
+           <source data-media="(min-width: 1024px)" data-src="http://placehold.it/1024x600" data-width="1024" data-height="600">
+           <source data-media="(min-width: 1200px)" data-src="http://placehold.it/1200x600" data-width="1200" data-height="600">
+           <noscript>
+               <img src="http://placehold.it/1200x600" alt="Alt da imagem" width="1200" height="600">
+           </noscript>
+        </picture>
+
+        <picture data-image-alt="Alt da imagem" data-lazy>
+           <source data-media="(min-width: 480px)"  data-src="http://placehold.it/480x320"  data-width="480"  data-height="320">
+           <source data-media="(min-width: 768px)"  data-src="http://placehold.it/768x600/00ffff"  data-width="768"  data-height="600">
+           <source data-media="(min-width: 1024px)" data-src="http://placehold.it/1024x600" data-width="1024" data-height="600">
+           <source data-media="(min-width: 1200px)" data-src="http://placehold.it/1200x600" data-width="1200" data-height="600">
+           <noscript>
+               <img src="http://placehold.it/1200x600" alt="Alt da imagem" width="1200" height="600">
+           </noscript>
+        </picture>
+
+        <picture data-image-alt="Alt da imagem" data-lazy>
+           <source data-media="(min-width: 480px)"  data-src="http://placehold.it/480x320"  data-width="480"  data-height="320">
+           <source data-media="(min-width: 768px)"  data-src="http://placehold.it/768x600/000fff"  data-width="768"  data-height="600">
+           <source data-media="(min-width: 1024px)" data-src="http://placehold.it/1024x600" data-width="1024" data-height="600">
+           <source data-media="(min-width: 1200px)" data-src="http://placehold.it/1200x600" data-width="1200" data-height="600">
+           <noscript>
+               <img src="http://placehold.it/1200x600" alt="Alt da imagem" width="1200" height="600">
+           </noscript>
+        </picture>
+
+        <picture data-image-alt="Alt da imagem" data-lazy>
+           <source data-media="(min-width: 480px)"  data-src="http://placehold.it/480x320"  data-width="480"  data-height="320">
+           <source data-media="(min-width: 768px)"  data-src="http://placehold.it/768x600/ff0000"  data-width="768"  data-height="600">
+           <source data-media="(min-width: 1024px)" data-src="http://placehold.it/1024x600" data-width="1024" data-height="600">
+           <source data-media="(min-width: 1200px)" data-src="http://placehold.it/1200x600" data-width="1200" data-height="600">
+           <noscript>
+               <img src="http://placehold.it/1200x600" alt="Alt da imagem" width="1200" height="600">
+           </noscript>
+        </picture>
+
+        <picture data-image-alt="Alt da imagem" data-lazy>
+           <source data-media="(min-width: 480px)"  data-src="http://placehold.it/480x320"  data-width="480"  data-height="320">
+           <source data-media="(min-width: 768px)"  data-src="http://placehold.it/768x600/00ffff"  data-width="768"  data-height="600">
+           <source data-media="(min-width: 1024px)" data-src="http://placehold.it/1024x600" data-width="1024" data-height="600">
+           <source data-media="(min-width: 1200px)" data-src="http://placehold.it/1200x600" data-width="1200" data-height="600">
+           <noscript>
+               <img src="http://placehold.it/1200x600" alt="Alt da imagem" width="1200" height="600">
+           </noscript>
+        </picture>
+
+        <picture data-image-alt="Alt da imagem" data-lazy>
+           <source data-media="(min-width: 480px)"  data-src="http://placehold.it/480x320"  data-width="480"  data-height="320">
+           <source data-media="(min-width: 768px)"  data-src="http://placehold.it/768x600/000fff"  data-width="768"  data-height="600">
+           <source data-media="(min-width: 1024px)" data-src="http://placehold.it/1024x600" data-width="1024" data-height="600">
+           <source data-media="(min-width: 1200px)" data-src="http://placehold.it/1200x600" data-width="1200" data-height="600">
+           <noscript>
+               <img src="http://placehold.it/1200x600" alt="Alt da imagem" width="1200" height="600">
+           </noscript>
+        </picture>
+
         <!-- build:js scripts/dojo.js -->
         <script>
             dojoConfig = {
