--- a/app/index.html
+++ b/app/index.html
@@ -175,12 +175,13 @@
                 packages: [{
                     name: 'lazy',
                     location: '/scripts'
-                }]
+                }],
+
+                deps: ['lazy/main.js']
             };
         </script>
 
         <script src="bower_components/dojo/dojo.js"></script>
-        <script src="scripts/main.js"></script>
         <!-- endbuild -->
 </body>
 </html>
