correcao da url do dojo config

--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,7 @@
         <!-- endbuild -->
     </head>
     <body>
-        
+
         <div class="bloco">
             <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, consequuntur, nam aspernatur nobis vel qui! Vero, pariatur odit minima maiores obcaecati aliquid ut hic numquam sint corrupti? Cum, illo, asperiores.</div>
             <div>Dignissimos, aliquid, quae, laborum eaque ex totam consequuntur repudiandae enim debitis ab sequi quis! Cum, quaerat, cupiditate nam animi ipsum dolorum illo inventore adipisci ut mollitia labore quos quo exercitationem!</div>
@@ -264,7 +264,7 @@
             dojoConfig = {
                 packages: [{
                     name: 'lazy',
-                    location: '/scripts'
+                    location: '/scripts/responsive-lazyload'
                 },{
                     name: 'onx',
                     location: '/bower_components/onx/src'
